src/test/compile-fail/extfmt-no-args.rs
// error-pattern:format string

fn main() { #ifmt[]; }
